Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/receiver/MissingAnnotationValue.out
MissingAnnotationValue.java:13:13: compiler.err.annotation.missing.default.value: A, field
1 error
